--- a/Legal/legal.html
+++ b/Legal/legal.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Mentions Légales - [Nom de ton application]</title>
+    <title>Mentions Légales - OrdoScan</title>
     <link rel="stylesheet" href="legal.css"> <!-- Lien vers le fichier CSS -->
 </head>
 <body>
@@ -14,20 +14,19 @@
         <div class="section">
             <h2>1. Éditeur de l’application</h2>
             <p>
-                <strong>Nom de l'application :</strong> [Nom de ton application]<br>
-                <strong>Responsable de l'édition :</strong> [Nom de la société/du développeur]<br>
-                <strong>Siège social :</strong> [Adresse du siège social]<br>
-                <strong>Numéro SIRET :</strong> [Numéro SIRET] (si applicable)<br>
-                <strong>Email de contact :</strong> [Adresse email pour contacter l’éditeur]<br>
-                <strong>Téléphone :</strong> [Numéro de téléphone]<br>
-                <strong>Hébergeur :</strong> [Nom de l’hébergeur, adresse et coordonnées de contact]
+                <strong>Nom de l'application :</strong> OrdoScan<br>
+                <strong>Responsable de l'édition :</strong> OrdoScan<br>
+                <strong>Siège social :</strong> 23 rue Collomgb<br>
+                <strong>Email de contact :</strong> h.OrdoScan@gmail.com<br>
+                <strong>Téléphone :</strong> 01 23 02 34 04<br>
+                <strong>Hébergeur :</strong> JEAN
             </p>
         </div>
 
         <div class="section">
             <h2>2. Objet de l’application</h2>
             <p>
-                L'application [Nom de ton application] a pour objectif de fournir une assistance à la gestion des traitements médicamenteux via un système de rappels. En scannant une ordonnance ou en entrant manuellement les informations concernant les médicaments, l'application permet à l'utilisateur de programmer des notifications de rappel afin de ne pas oublier de prendre ses médicaments.
+                L'application OrdoScan a pour objectif de fournir une assistance à la gestion des traitements médicamenteux via un système de rappels. En scannant une ordonnance ou en entrant manuellement les informations concernant les médicaments, l'application permet à l'utilisateur de programmer des notifications de rappel afin de ne pas oublier de prendre ses médicaments.
             </p>
             <p>Fonctionnalités principales :</p>
             <ul>
@@ -41,7 +40,7 @@
         <div class="section">
             <h2>3. Conditions d’utilisation</h2>
             <p>
-                L'utilisation de l'application [Nom de ton application] implique l'acceptation pleine et entière des présentes mentions légales. Si l'utilisateur n'accepte pas les présentes conditions, il est prié de ne pas utiliser l'application.
+                L'utilisation de l'application OrdoScan implique l'acceptation pleine et entière des présentes mentions légales. Si l'utilisateur n'accepte pas les présentes conditions, il est prié de ne pas utiliser l'application.
             </p>
             <p>
                 L'application est proposée à des fins d'assistance uniquement et ne remplace en aucun cas une consultation médicale ni un suivi par un professionnel de la santé. L'utilisateur reste responsable de la vérification des informations saisies et de la bonne gestion de ses prises de médicaments.
@@ -51,7 +50,7 @@
         <div class="section">
             <h2>4. Protection des données personnelles</h2>
             <p>
-                L'application [Nom de ton application] traite certaines données personnelles nécessaires à son fonctionnement, conformément à la <strong>Réglementation Générale sur la Protection des Données (RGPD)</strong> et à la loi française <strong>Informatique et Libertés</strong> du 6 janvier 1978 modifiée.
+                L'application OrdoScan traite certaines données personnelles nécessaires à son fonctionnement, conformément à la <strong>Réglementation Générale sur la Protection des Données (RGPD)</strong> et à la loi française <strong>Informatique et Libertés</strong> du 6 janvier 1978 modifiée.
             </p>
             <p><strong>a. Données collectées :</strong></p>
             <p>Les données personnelles collectées par l'application incluent :</p>
@@ -74,7 +73,7 @@
         <div class="section">
             <h2>5. Limitation de responsabilité</h2>
             <p>
-                L'éditeur de l'application [Nom de ton application] décline toute responsabilité en cas d'erreur dans l'utilisation des rappels de prise de médicaments, que ce soit liée à une mauvaise interprétation des données ou à une erreur de saisie de la part de l'utilisateur.
+                L'éditeur de l'application OrdoScan décline toute responsabilité en cas d'erreur dans l'utilisation des rappels de prise de médicaments, que ce soit liée à une mauvaise interprétation des données ou à une erreur de saisie de la part de l'utilisateur.
             </p>
             <p>
                 L'application est fournie "en l'état" et l'éditeur ne peut garantir l'absence de défauts techniques. L'utilisateur doit toujours consulter un professionnel de santé pour tout avis ou ajustement concernant son traitement médical.
@@ -84,7 +83,7 @@
         <div class="section">
             <h2>6. Propriété intellectuelle</h2>
             <p>
-                L'ensemble des contenus présents sur l'application [Nom de ton application] (textes, images, logos, graphiques, etc.) sont protégés par les droits de propriété intellectuelle et sont la propriété exclusive de [Nom de l'éditeur]. Toute reproduction ou exploitation des contenus, sans autorisation préalable, est strictement interdite.
+                L'ensemble des contenus présents sur l'application OrdoScan (textes, images, logos, graphiques, etc.) sont protégés par les droits de propriété intellectuelle et sont la propriété exclusive de [Nom de l'éditeur]. Toute reproduction ou exploitation des contenus, sans autorisation préalable, est strictement interdite.
             </p>
         </div>
 
@@ -103,7 +102,7 @@
         </div>
 
         <footer>
-            <p>&copy; 2024 [Nom de ton application]. Tous droits réservés.</p>
+            <p>&copy; 2024 OrdoScan. Tous droits réservés.</p>
         </footer>
     </div>
 </body>
