--- a/Legal/legal.html
+++ b/Legal/legal.html
@@ -83,7 +83,7 @@
         <div class="section">
             <h2>6. Propriété intellectuelle</h2>
             <p>
-                L'ensemble des contenus présents sur l'application OrdoScan (textes, images, logos, graphiques, etc.) sont protégés par les droits de propriété intellectuelle et sont la propriété exclusive de [Nom de l'éditeur]. Toute reproduction ou exploitation des contenus, sans autorisation préalable, est strictement interdite.
+                L'ensemble des contenus présents sur l'application OrdoScan (textes, images, logos, graphiques, etc.) sont protégés par les droits de propriété intellectuelle et sont la propriété exclusive de JEAN. Toute reproduction ou exploitation des contenus, sans autorisation préalable, est strictement interdite.
             </p>
         </div>
 
@@ -97,7 +97,7 @@
         <div class="section">
             <h2>8. Loi applicable et juridiction compétente</h2>
             <p>
-                Les présentes mentions légales sont régies par le droit français. En cas de litige, les parties s'engagent à rechercher une solution amiable avant toute action judiciaire. À défaut d'accord, le litige sera porté devant les tribunaux compétents du ressort de [Ville].
+                Les présentes mentions légales sont régies par le droit français. En cas de litige, les parties s'engagent à rechercher une solution amiable avant toute action judiciaire. À défaut d'accord, le litige sera porté devant les tribunaux compétents du ressort de Lyon.
             </p>
         </div>
 
