--- a/connexion/connexion.html
+++ b/connexion/connexion.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Poppins:wght@500&display=swap" rel="stylesheet">
-    <link rel='stylesheet' type='text/css' media='screen' href='loginPage.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='connexion.css'>
     <script src='main.js'></script>
 </head>
 <body>
@@ -36,6 +36,12 @@
         <p>© 2024 OrdoScan. Tous droits réservés.</p>
         <a href="../Legal/legal.html" id="legal-href">
            <p id="p-legal">legal</p> 
+        </a>
+        <a href="../cgu/cgu.html" id="cgu-href">
+           <p id="p-legal">Conditions Générale</p> 
+        </a>
+        <a href="../politique/politique.html" id="politique-href">
+           <p id="p-legal">politque</p> 
         </a>
     </footer>
 </body>
