--- a/ScannerPage/index.html
+++ b/ScannerPage/index.html
@@ -9,6 +9,7 @@
   <script type="module" src="script.js"></script>
   <script src="../trad.js" defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
 </head>
 <body>
   <header class="navbar">
@@ -24,6 +25,9 @@
           <option value="EN"><span class="flag-icon flag-icon-gb">EN</span></option>
           <option value="ES"><span class="flag-icon flag-icon-es">ES</span></option>
           <option value="DE"><span class="flag-icon flag-icon-de">DE</span></option>
+          <option value="IT"><span class="flag-icon flag-icon-it">IT</span></option>
+          <option value="PT"><span class="flag-icon flag-icon-pt">PT</span></option>
+          <option value="NL"><span class="flag-icon flag-icon-nl">NL</span></option>
       </select>
       </nav>
       <div class="user-menu">
