--- a/profil/profil.html
+++ b/profil/profil.html
@@ -47,23 +47,27 @@
     <section class="profile-section">
         <h1>Profil Utilisateur</h1>
         <div class="profile-container">
-           <img src="../assets/logo ol.svg" alt="Avatar" class="profile-avatar">
-           <div class="profile-details">
-              <p><strong>Nom:</strong> <input type="text" name="nom" placeholder="Nom" value="SALMON" disabled></p>
-              <p><strong>Prénom:</strong> <input type="text" name="prenom" placeholder="Prénom" value="Hugo" disabled></p>
-              <p><strong>Email:</strong> <input type="email" name="email" placeholder="Email" value="hugo.salmon@example.com" disabled></p>
-              <p><strong>Date de naissance:</strong> <input type="date" name="dob" disabled></p>
-              <p><strong>Téléphone:</strong> <input type="tel" name="telephone" placeholder="Téléphone" disabled></p>
-              <p><strong>Sexe:</strong> 
-                  <select name="sexe" disabled>
-                     <option value="M">M</option>
-                     <option value="F">F</option>
-                  </select>
-              </p>
-              <button class="edit-profile-btn" id="editBtn" onclick="toggleEdit()">Modifier le profil</button>
-           </div>
+           <img src="logo ol.svg" alt="Avatar" class="profile-avatar">
+           <form id="profileForm">
+               <div class="profile-details">
+                  <p><strong>Nom:</strong> <input type="text" name="nom" placeholder="Nom" value="SALMON" disabled required></p>
+                  <p><strong>Prénom:</strong> <input type="text" name="prenom" placeholder="Prénom" value="Hugo" disabled required></p>
+                  <p><strong>Email:</strong> <input type="email" name="email" placeholder="Email" value="hugo.salmon@example.com" disabled required></p>
+                  <p><strong>Date de naissance:</strong> <input type="date" name="dob" disabled required></p>
+                  <p><strong>Téléphone:</strong> <input type="tel" name="telephone" placeholder="Téléphone" disabled required></p>
+                  <p><strong>Sexe:</strong> 
+                      <select name="sexe" disabled required>
+                         <option value="M">M</option>
+                         <option value="F">F</option>
+                      </select>
+                  </p>
+                  <button type="button" class="edit-profile-btn" id="editBtn">Modifier le profil</button>
+                  <button type="submit" class="edit-profile-btn" id="saveBtn" style="display: none;">Enregistrer</button>
+                  <button type="button" class="edit-profile-btn" id="cancelBtn" style="display: none;">Annuler</button> <!-- New cancel button -->
+               </div>
+           </form>
         </div>
-    </section>             
+    </section>
   </main>
 
   <footer class="footer">
