--- a/connexion/connexion.html
+++ b/connexion/connexion.html
@@ -27,7 +27,7 @@
                 <script>
                     const onClickContainer = document.getElementById("container-login");
                     onClickContainer.onclick= 
-                () => window.location.replace("index.html");
+                () => window.location.replace("../ScannerPage/index.html");
                 </script>
             </div>
         </div>
