--- a/ScannerPage/index.html
+++ b/ScannerPage/index.html
@@ -37,7 +37,7 @@
         <div class="dropdown">
           <button class="dropdown-btn">Hugo SALMON</button>
           <div class="dropdown-content">
-            <a href="#profile">Profil</a>
+            <a href="../profil/profil.html">Profil</a>
             <a href="../connexion/connexion.html">Changer de compte</a>
             <a href="../connexion/connexion.html">Déconnexion</a>
           </div>
