--- a/HistoryPage/index.html
+++ b/HistoryPage/index.html
@@ -37,9 +37,9 @@
         <div class="dropdown">
           <button class="dropdown-btn">Hugo SALMON</button>
           <div class="dropdown-content">
-            <a href="#profile">Profil</a>
-            <a href="../connexion/connexion.html">Changer de compte</a>
-            <a href="../connexion/connexion.html">Déconnexion</a>
+            <a href="../ProfilePage/index.html">Profil</a>
+            <a href="../LoginPage/index.html">Changer de compte</a>
+            <a href="../LoginPage/index.html">Déconnexion</a>
           </div>
         </div>
       </div>
