--- a/CguPage/index.html
+++ b/CguPage/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Conditions Générales d'Utilisation - OrdoScan</title>
-    <link rel="stylesheet" href="cgu.css"> <!-- Lien vers ton fichier CSS -->
+    <link rel="stylesheet" href="styles.css"> <!-- Lien vers ton fichier CSS -->
 </head>
 <body>
     <div class="container">
