--- a/LoginPage/index.html
+++ b/LoginPage/index.html
@@ -31,17 +31,17 @@
             </div>
         </div>
     </div>
-    <footer>
-        <p>© 2024 OrdoScan. Tous droits réservés.</p>
-        <a href="../LegalNoticePage/index.html" id="legal-href">
-           <p id="p-legal">Mentions légales</p> 
-        </a>
-        <a href="../CguPage/index.html" id="cgu-href">
-           <p id="p-legal">Conditions Générales d'Utilisations</p> 
-        </a>
-        <a href="../PrivacyPolicyPage/index.html" id="politique-href">
-           <p id="p-legal">Politique de confidentialité</p> 
-        </a>
-    </footer>
+    <footer class="footer">
+        <p>&copy; 2024 - Extraction de texte avec Google Vision</p>
+        <a href="../LegalNoticePage/index.html" id="legal-href" target="_blank">
+          <p id="p-legal">Mentions légales</p> 
+       </a>
+       <a href="../CguPage/index.html" id="cgu-href" target="_blank">
+          <p id="p-legal">Conditions Générales</p> 
+       </a>
+       <a href="../PrivacyPolicyPage/index.html" id="politique-href" target="_blank">
+          <p id="p-legal">Politique de confidentialité</p> 
+       </a>
+      </footer>
 </body>
 </html>
