--- a/SettingsPage/index.html
+++ b/SettingsPage/index.html
@@ -19,7 +19,7 @@
       <img src="../assets/ordoscan-high-resolution-logo-white-removebg.png" alt="Logo" class="logo">
       <nav class="nav-links">
         <a href="../ScannerPage/index.html"><i class="fas fa-upload"></i> Ajout d'ordonnances</a>
-        <a href="#"><i class="fas fa-pills"></i> Médicaments</a>
+        <a href="../MedicamentsPage/index.html"><i class="fas fa-pills"></i> Médicaments</a>
         <a href="../HistoryPage/index.html"><i class="fas fa-history"></i> Mon historique</a>
         <a href="#"><i class="fas fa-cog"></i> Paramètres</a>
         <select id="langue">
@@ -37,7 +37,7 @@
         <div class="dropdown">
           <button class="dropdown-btn">Hugo SALMON</button>
           <div class="dropdown-content">
-            <a href="#">Profil</a>
+            <a href="../ProfilePage/index.html">Profil</a>
             <a href="../LoginPage/index.html">Changer de compte</a>
             <a href="../LoginPage/index.html">Déconnexion</a>
           </div>
@@ -56,6 +56,15 @@
 
   <footer class="footer">
     <p>&copy; 2024 - Extraction de texte avec Google Vision</p>
+    <a href="../LegalNoticePage/index.html" id="legal-href" target="_blank">
+      <p id="p-legal">Mentions légales</p> 
+   </a>
+   <a href="../CguPage/index.html" id="cgu-href" target="_blank">
+      <p id="p-legal">Conditions Générales</p> 
+   </a>
+   <a href="../PrivacyPolicyPage/index.html" id="politique-href" target="_blank">
+      <p id="p-legal">Politique de confidentialité</p> 
+   </a>
   </footer>
 </body>
 </html>
