--- a/HistoryPage/index.html
+++ b/HistoryPage/index.html
@@ -19,7 +19,7 @@
       <img src="../assets/ordoscan-high-resolution-logo-white-removebg.png" alt="Logo" class="logo">
       <nav class="nav-links">
         <a href="../ScannerPage/index.html"><i class="fas fa-upload"></i> Ajout d'ordonnances</a>
-        <a href="#"><i class="fas fa-pills"></i> Médicaments</a>
+        <a href="../MedicamentsPage/index.html"><i class="fas fa-pills"></i> Médicaments</a>
         <a href="#"><i class="fas fa-history"></i> Mon historique</a>
         <a href="../SettingsPage/index.html"><i class="fas fa-cog"></i> Paramètres</a>
         <select id="langue">
@@ -56,6 +56,15 @@
 
   <footer class="footer">
     <p>&copy; 2024 - Extraction de texte avec Google Vision</p>
+    <a href="../LegalNoticePage/index.html" id="legal-href" target="_blank">
+      <p id="p-legal">Mentions légales</p> 
+   </a>
+   <a href="../CguPage/index.html" id="cgu-href" target="_blank">
+      <p id="p-legal">Conditions Générales</p> 
+   </a>
+   <a href="../PrivacyPolicyPage/index.html" id="politique-href" target="_blank">
+      <p id="p-legal">Politique de confidentialité</p> 
+   </a>
   </footer>
 </body>
 </html>
