--- a/HistoryPage/index.html
+++ b/HistoryPage/index.html
@@ -53,18 +53,12 @@
     </div>
   </main>
   
-
+  
   <footer class="footer">
     <p>&copy; 2024 - Extraction de texte avec Google Vision</p>
-    <a href="../LegalNoticePage/index.html" id="legal-href" target="_blank">
-      <p id="p-legal">Mentions légales</p> 
-   </a>
-   <a href="../CguPage/index.html" id="cgu-href" target="_blank">
-      <p id="p-legal">Conditions Générales</p> 
-   </a>
-   <a href="../PrivacyPolicyPage/index.html" id="politique-href" target="_blank">
-      <p id="p-legal">Politique de confidentialité</p> 
-   </a>
+    <a href="../LegalNoticePage/index.html" id="legal-href" target="_blank">Mentions légales</a>
+    <a href="../CguPage/index.html" id="cgu-href" target="_blank">Conditions Générales</a>
+    <a href="../PrivacyPolicyPage/index.html" id="politique-href" target="_blank">Politique de confidentialité</a>
   </footer>
 </body>
 </html>
