--- a/MedicamentsPage/index.html
+++ b/MedicamentsPage/index.html
@@ -28,7 +28,7 @@
           <option value="IT"><span class="flag-icon flag-icon-it">IT</span></option>
           <option value="PT"><span class="flag-icon flag-icon-pt">PT</span></option>
           <option value="NL"><span class="flag-icon flag-icon-nl">NL</span></option>
-      </select>
+        </select>
       </nav>
       <div class="user-menu">
         <img src="../assets/logo ol.svg" alt="Avatar" class="avatar">
@@ -64,18 +64,12 @@
     </div>
   </main>
   
-
+  
   <footer class="footer">
     <p>&copy; 2024 - Extraction de texte avec Google Vision</p>
-    <a href="../LegalNoticePage/index.html" id="legal-href" target="_blank">
-      <p id="p-legal">Mentions légales</p> 
-   </a>
-   <a href="../CguPage/index.html" id="cgu-href" target="_blank">
-      <p id="p-legal">Conditions Générales</p> 
-   </a>
-   <a href="../PrivacyPolicyPage/index.html" id="politique-href" target="_blank">
-      <p id="p-legal">Politique de confidentialité</p> 
-   </a>
+    <a href="../LegalNoticePage/index.html" id="legal-href" target="_blank">Mentions légales</a>
+    <a href="../CguPage/index.html" id="cgu-href" target="_blank">Conditions Générales</a>
+    <a href="../PrivacyPolicyPage/index.html" id="politique-href" target="_blank">Politique de confidentialité</a>
   </footer>
 </body>
 </html>
