--- a/ProfilePage/index.html
+++ b/ProfilePage/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profil Utilisateur</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="../trad.js" defer></script>
-    <script src="script.js" defer></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf/notyf.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/notyf/notyf.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Profil Utilisateur</title>
+  <link rel="stylesheet" href="styles.css">
+  <script src="../trad.js" defer></script>
+  <script src="script.js" defer></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf/notyf.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/notyf/notyf.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
+</head>
 <body>
   <header class="navbar">
     <div class="navbar-content">
@@ -44,45 +44,39 @@
       </div>
     </div>
   </header>
-
+  
   <main>
     <section class="profile-section">
-        <h1>Profil Utilisateur</h1>
-        <div class="profile-container">
-           <img src="../assets/logo ol.svg" alt="Avatar" class="profile-avatar">
-           <form id="profileForm">
-               <div class="profile-details">
-                  <p><strong>Nom*:</strong> <input type="text" name="nom" placeholder="Nom" value="SALMON" disabled required></p>
-                  <p><strong>Prénom*:</strong> <input type="text" name="prenom" placeholder="Prénom" value="Hugo" disabled required></p>
-                  <p><strong>Civilité*:</strong> 
-                    <select name="sexe" disabled required>
-                       <option value="M">M</option>
-                       <option value="F">F</option>
-                    </select>
-                </p>
-                  <p><strong>Email*:</strong> <input type="email" name="email" placeholder="Email" value="hugo.salmon@example.com" disabled required></p>
-                  <p><strong>Date de naissance*:</strong> <input type="date" name="dob" disabled required></p>
-                  <p><strong>Téléphone*:</strong> <input type="tel" name="telephone" placeholder="Téléphone" disabled required></p>
-                  <button type="button" class="edit-profile-btn" id="editBtn">Modifier le profil</button>
-                  <button type="button" class="edit-profile-btn" id="cancelBtn" style="display: none;">Annuler</button>
-                  <button type="submit" class="edit-profile-btn" id="saveBtn" style="display: none;">Enregistrer</button>
-               </div>
-           </form>
-        </div>
+      <h1>Profil Utilisateur</h1>
+      <div class="profile-container">
+        <img src="../assets/logo ol.svg" alt="Avatar" class="profile-avatar">
+        <form id="profileForm">
+          <div class="profile-details">
+            <p><strong>Nom*:</strong> <input type="text" name="nom" placeholder="Nom" value="SALMON" disabled required></p>
+            <p><strong>Prénom*:</strong> <input type="text" name="prenom" placeholder="Prénom" value="Hugo" disabled required></p>
+            <p><strong>Civilité*:</strong> 
+              <select name="sexe" disabled required>
+                <option value="M">M</option>
+                <option value="F">F</option>
+              </select>
+            </p>
+            <p><strong>Email*:</strong> <input type="email" name="email" placeholder="Email" value="hugo.salmon@example.com" disabled required></p>
+            <p><strong>Date de naissance*:</strong> <input type="date" name="dob" disabled required></p>
+            <p><strong>Téléphone*:</strong> <input type="tel" name="telephone" placeholder="Téléphone" disabled required></p>
+            <button type="button" class="edit-profile-btn" id="editBtn">Modifier le profil</button>
+            <button type="button" class="edit-profile-btn" id="cancelBtn" style="display: none;">Annuler</button>
+            <button type="submit" class="edit-profile-btn" id="saveBtn" style="display: none;">Enregistrer</button>
+          </div>
+        </form>
+      </div>
     </section>
   </main>
-
+  
   <footer class="footer">
     <p>&copy; 2024 - Extraction de texte avec Google Vision</p>
-    <a href="../LegalNoticePage/index.html" id="legal-href" target="_blank">
-      <p id="p-legal">Mentions légales</p> 
-   </a>
-   <a href="../CguPage/index.html" id="cgu-href" target="_blank">
-      <p id="p-legal">Conditions Générales</p> 
-   </a>
-   <a href="../PrivacyPolicyPage/index.html" id="politique-href" target="_blank">
-      <p id="p-legal">Politique de confidentialité</p> 
-   </a>
+    <a href="../LegalNoticePage/index.html" id="legal-href" target="_blank">Mentions légales</a>
+    <a href="../CguPage/index.html" id="cgu-href" target="_blank">Conditions Générales</a>
+    <a href="../PrivacyPolicyPage/index.html" id="politique-href" target="_blank">Politique de confidentialité</a>
   </footer>
 </body>
 </html>
