--- a/SettingsPage/index.html
+++ b/SettingsPage/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mon historique</title>
+  <title>Paramètres</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf/notyf.min.css">
   <script src="https://cdn.jsdelivr.net/npm/notyf/notyf.min.js"></script>
   <link rel="stylesheet" href="styles.css">
@@ -53,18 +53,12 @@
     </div>
   </main>
   
-
+  
   <footer class="footer">
     <p>&copy; 2024 - Extraction de texte avec Google Vision</p>
-    <a href="../LegalNoticePage/index.html" id="legal-href" target="_blank">
-      <p id="p-legal">Mentions légales</p> 
-   </a>
-   <a href="../CguPage/index.html" id="cgu-href" target="_blank">
-      <p id="p-legal">Conditions Générales</p> 
-   </a>
-   <a href="../PrivacyPolicyPage/index.html" id="politique-href" target="_blank">
-      <p id="p-legal">Politique de confidentialité</p> 
-   </a>
+    <a href="../LegalNoticePage/index.html" id="legal-href" target="_blank">Mentions légales</a>
+    <a href="../CguPage/index.html" id="cgu-href" target="_blank">Conditions Générales</a>
+    <a href="../PrivacyPolicyPage/index.html" id="politique-href" target="_blank">Politique de confidentialité</a>
   </footer>
 </body>
 </html>
