--- a/HistoryPage/index.html
+++ b/HistoryPage/index.html
@@ -47,7 +47,7 @@
   </header>
   
   <main>
-    <h1 class="main-title">Historique de l'application</h1>
+    <h1 class="main-title">Historique de mes ordonnances</h1>
     <div class="placeholder">
       <p>Cette page n'est pas encore disponible.</p>
     </div>
