--- a/LoginPage/index.html
+++ b/LoginPage/index.html
@@ -8,15 +8,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf/notyf.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/notyf/notyf.min.js"></script>
+    <script type="module" src="script.js" defer></script>
     <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
-    <script src='script.js' defer></script>
 </head>
 <body>
     <div id="body-content">
         <div id="title-h1">
             <h1>Connexion</h1>
         </div>
-        <div id="container-login" onclick="window.location.replace('../ScannerPage/index.html')">
+        <div id="container-login">
             <div id="logo-app-connection">
                 <img src="../assets/ordoscan-high-resolution-logo-white-removebg.png" alt="Logo OrdoScan" id="logo-app">
             </div>
