--- a/ProfilePage/index.html
+++ b/ProfilePage/index.html
@@ -17,9 +17,9 @@
     <div class="navbar-content">
       <img src="../assets/ordoscan-high-resolution-logo-white-removebg.png" alt="Logo" class="logo">
       <nav class="nav-links">
-        <a href="../ScannerPage/index.html"><i class="fas fa-upload"></i> Téléverser</a>
-        <a href="../MedicamentsPage/index.html"><i class="fas fa-pills"></i> Mes Médicaments</a>
-        <a href="../HistoryPage/index.html"><i class="fas fa-history"></i> Historique</a>
+        <a href="../ScannerPage/index.html"><i class="fas fa-upload"></i> Ajout d'ordonnances</a>
+        <a href="../MedicamentsPage/index.html"><i class="fas fa-pills"></i> Médicaments</a>
+        <a href="../HistoryPage/index.html"><i class="fas fa-history"></i> Mon historique</a>
         <a href="../SettingsPage/index.html"><i class="fas fa-cog"></i> Paramètres</a>
         <select id="langue">
           <option value="FR"><span class="flag-icon flag-icon-fr">FR</span></option>
